<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold1"
    android:elevation="10dp"
    tools:context="bzu.edu.sham.Cart"
    tools:ignore="VisualLintBounds">


    <ImageView
        android:id="@+id/logo"
        style="@style/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fezlogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:background="@color/red"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/listitems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Button
            android:id="@+id/btnhome"
            android:backgroundTint="@color/gold2"
            android:text="@string/browse"
            style="@style/Button" />


        <LinearLayout
            android:id="@+id/CartPrice"
            style="@style/PriceLayout"
            android:layout_marginStart="115dp"
            tools:ignore="TextSizeCheck,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgcart"
                style="@style/imgCart"
                android:contentDescription="@string/cart"
                app:srcCompat="@drawable/cart" />

            <TextView
                android:id="@+id/txttotal"
                style="@style/Text3"
                android:text="@string/total" />
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listitems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gold3"
        app:layout_constraintBottom_toBottomOf="@id/linearCheckout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listitems">
    <Button
        android:id="@+id/btnCheckout"
        style="@style/Button"
        android:text="@string/checkout"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>