<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold1"
    android:elevation="10dp"
    tools:context="bzu.edu.sham.Home"
    tools:ignore="VisualLintBounds">


    <ImageView
        android:id="@+id/logo"
        style="@style/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fezlogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:background="@color/red"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/listitems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Spinner
            android:id="@+id/spnitem"
            style="@style/spinner" />


        <LinearLayout
            android:id="@+id/CartPrice"
            style="@style/PriceLayout"
            android:layout_marginStart="80dp"
            tools:ignore="TextSizeCheck,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgcart"
                style="@style/imgCart"
                android:contentDescription="@string/cart"
                app:srcCompat="@drawable/cart" />

            <TextView
                android:id="@+id/txttotal"
                style="@style/Text3"
                android:text="@string/total" />
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listitems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>